# desktop-webapp-browser-extension

./: .gitignore  Makefile.am  configure.ac
chromium-extension/: Makefile.am  background.html  background.js  crxmake.sh  manifest.json.in
npapi-plugin/src/: Makefile.am  object.c  object.h  plugin.c  plugin.h  webapp-monitor.c  webapp-monitor.h
